# YAE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: config.h.in  languages.cmake  policies.cmake
src/YAE/: Application.h  AttributedString.cpp  AttributedString.h  Color.h  Common.h  Error.h  Font.h  FontManager.h  GlyphRun.cpp  GlyphRun.h  Path.h  TFLine.h  TextAttributes.h  View.h  Window.h  YAE.h
src/YAE/APPLE/: Application.mm  Font.mm  FontManager.mm  View.mm  Window.mm
src/YAE/X11/: Application.cpp  Window.cpp
tutorials/HelloWorld/: CMakeLists.txt  main.cpp
